--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
+    "concurrently": "^7.4.0",
+    "firebase": "^9.12.1",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-vivus": "^0.0.2",
@@ -20,7 +23,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run start-react\" \"npm run server\"",
+    "start-react": "react-scripts --max_old_space_size=8128 start",
     "build": "react-scripts build",
     "server": "json-server --watch ./db.json --port 3001",
     "test": "react-scripts test",
